# nectar-sdk

./: .dockerignore  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  README_INSTALLATION.md  install_env.sh  install_realsense.sh  mkdocs.yml  package.xml  requirements-ai.txt  requirements.txt  setup.py
mirela_sdk/: CMakeLists.txt  gui.py  package.xml  pyproject.toml  setup.cfg  setup.py
mirela_sdk/config/mavros/: position_indoor.yaml  position_outdoor.yaml
mirela_sdk/control/bebop/: bebop_api.py
mirela_sdk/control/mavros/: gps_controller.py  mavros_api.py
mirela_sdk/control/mavros/examples/: test_velocity.py
mirela_sdk/image_processing/aruco/: aruco_detect.py  aruco_node.py
mirela_sdk/image_processing/camera/: image_handler.py  test_raspicam.py
mirela_sdk/image_processing/camera/calibration/: camera_distortion.txt
mirela_sdk/interface/: bebop_component.py  drone_component.py  gui.py  mav_component.py
mirela_sdk/launch/: gesture_control_launch.py
mirela_sdk/mirela_sdk/ai/: README.md  __init__.py
mirela_sdk/mirela_sdk/ai/detection/: README.md  __init__.py  base.py  detector.py  yolo_detector.py
mirela_sdk/mirela_sdk/ai/utils/: __init__.py  roboflow_uploader.py
mirela_sdk/mirela_sdk/control/: API.md  README.md  REFACTOR.md  __init__.py  base.py  config.py  driver_monitor.py  drone.py  exceptions.py  factory.py  protocols.py  types.py
mirela_sdk/mirela_sdk/control/bebop/: README.md  __init__.py  bebop_api.py  drone.py
mirela_sdk/mirela_sdk/control/mavros/: README.md  __init__.py  drone.py  exceptions.py  gps_controller.py  gps_utils.py  mavros_api.py  navigator.py  obstacle_detector.py  position_controller.py  precision_landing.py
mirela_sdk/mirela_sdk/control/obstacles/: README.md  __init__.py  base.py  depth_camera.py  handler.py  strategies.py  types.py
mirela_sdk/mirela_sdk/control/pid/: README.md  __init__.py  config.py  controller.py  pid_controller.py  pid_node.py
mirela_sdk/mirela_sdk/examples/: camera_example.py  depth_example.py  gate_detect.py  oakd_disparity_display.py  oakd_test.py  oakd_yoloNN_example.py  pid_example_system.py  raspicam_viewer.py  test_gps.py  test_velocity.py  yolo_batch_detector.py  yolo_example.py
mirela_sdk/mirela_sdk/examples/ai/: README.md  batch_detector.py  detector_example.py  yolo_batch_detector.py  yolo_example.py
mirela_sdk/mirela_sdk/examples/control/: README.md  __init__.py  basic.py  mavros_navigation.py  mavros_obstacles.py  pid_simulation.py  sensors.py
mirela_sdk/mirela_sdk/examples/vision/: README.md  camera_example.py  depth_example.py  oakd_disparity_display.py  oakd_test.py  oakd_yoloNN_example.py  yolo_batch_detector.py  yolo_example.py
mirela_sdk/mirela_sdk/image_processing/: README.md  __init__.py
mirela_sdk/mirela_sdk/image_processing/aruco/: __init__.py  aruco_detect.py  aruco_node.py
mirela_sdk/mirela_sdk/image_processing/camera/: __init__.py  abstract_cam.py  c920_cam.py  camera_config.py  camera_factory.py  file_image_cam.py  image_calculus.py  image_handler.py  imx219_cam.py  oakd_cam.py  opencv_cam.py  realsense_cam.py  ros_cam.py  webcam_publisher_node.py
mirela_sdk/mirela_sdk/image_processing/color/: __init__.py  color_calibration.json  color_calibration.txt  color_calibration_node.py  color_detector.py
mirela_sdk/mirela_sdk/image_processing/distance/: distance_calibration.py  distance_estimation.py  distance_models.py  distance_parameters.py
mirela_sdk/mirela_sdk/image_processing/line/: __init__.py  line_detection_node.py  line_detector.py
mirela_sdk/mirela_sdk/interface/: README.md  __init__.py  app.py  bebop_component.py  drone_component.py  gui.py  mav_component.py  ros_executor.py  run_gui.py  theme.py
mirela_sdk/mirela_sdk/interface/tabs/: __init__.py  control_tab.py  plot_tab.py  ros_tab.py  vision_tab.py
mirela_sdk/mirela_sdk/utils/: README.md  gps_calculate.py  position_utils.py  process.py
mirela_sdk/mirela_sdk/vision/: README.md  __init__.py  exceptions.py  protocols.py  types.py
mirela_sdk/solutions/aruco_controller/: aruco_controller.py
mirela_sdk/solutions/flute_frequecy/: controller.py  frequency_reconizer.py  node_recognizer.py
mirela_sdk/solutions/hand_gesture/: controller.py  gesture_recognizer.py
nectar/: CMakeLists.txt  LICENSE  package.xml  pyproject.toml
nectar/launch/: isaac_vslam_realsense.launch.py  px4_sitl.launch.py  sitl.launch.py  sitl_gazebo.launch.py  vision_pose.launch.py  vslam_rviz.launch.py
nectar/nectar/: __init__.py  runtime.py
nectar/nectar/ai/: README.md  __init__.py  paths.py
nectar/nectar/ai/classification/: README.md  (+2 more)
nectar/nectar/control/: API.md  README.md  __init__.py  base.py  capabilities.py  config.py  driver_monitor.py  exceptions.py  factory.py  protocols.py  types.py
nectar/nectar/diagnostics/: __init__.py  __main__.py  ai.py  control.py  core.py  crazyflie.py  doctor.py  helpers.py  interface.py  localization.py  runner.py  sensors.py  simulation.py  vision.py
nectar/nectar/interface/: README.md  __init__.py  app.py  ros_executor.py  run_gui.py  theme.py
nectar/nectar/sensors/: README.md  __init__.py  base.py  rangefinder_publisher.py
nectar/nectar/utils/: README.md  gps_calculate.py  log.py  position_utils.py  process.py
nectar/nectar/vision/: README.md  __init__.py
nectar/simulation/: README.md
nectar/simulation/config/: apm_config_sitl.yaml  apm_pluginlists_sitl.yaml  px4_config_sitl.yaml  px4_pluginlists_sitl.yaml
nectar/simulation/params/: gazebo.parm  indoor.parm  rangefinder_test.parm
nectar/simulation/templates/: indoor_vehicle.sdf.in  outdoor_vehicle.sdf.in
nectar/simulation/worlds/: indoor_room.sdf  outdoor_field.sdf  outdoor_field_px4.sdf  rangefinder_test.sdf
nectar/test/: benchmark_geodesic_vs_haversine.py  conftest.py  helpers.py
nectar/test/functional/: test_ai.py  test_control.py  test_core.py  test_interface.py  test_localization.py  test_sensors.py  test_simulation.py  test_vision.py
nectar/test/hardware/: test_devices.py
nectar/test/sitl/: conftest.py  sim_helpers.py  test_flight.py
(+612 files in other folders)
