# =============================================================================
# MIRELA SDK - Python Dependencies
# =============================================================================
# Install: pip install -e "."            (core only)
#          pip install -e ".[all]"       (all modules except AI — lightweight)
#          pip install -e ".[full]"      (everything including AI)
#
# For AI module: install PyTorch first based on your hardware:
#   CPU:     pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
#   CUDA 12: pip install torch torchvision --index-url https://download.pytorch.org/whl/cu124
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirela-sdk"
version = "0.1.0"
description = "Drone control, computer vision, and AI toolkit for ROS2"
readme = {text = "Drone control, computer vision, and AI toolkit for ROS2", content-type = "text/plain"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
maintainers = [
    {name = "Black Bee Drones", email = "samuellimabraz@gmail.com"},
]

dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "opencv-python==4.11.0.86",
    "opencv-contrib-python==4.11.0.86",
    "scipy==1.14.1",
    "pillow==12.1.1",
    "pyyaml==6.0.3",
    "tqdm==4.67.3",
    "catkin-pkg==1.0.0",
]

[project.optional-dependencies]

control = [
    "pygeodesy==26.2.2",
    "shapely==2.1.2",
    "geopy==2.4.1",
    "transforms3d==0.4.2",
    "scikit-learn==1.7.2",
]

vision = [
    "mediapipe==0.10.32",
]

ai = [
    "ultralytics==8.4.14",
    "huggingface-hub==0.32.4",
    "transformers==4.53.3",
    "timm==1.0.24",
    "accelerate==1.12.0",
    "datasets==3.6.0",
    "rfdetr==1.4.1",
    "supervision==0.27.0",
    "tensorboard==2.20.0",
    "roboflow==1.2.13",
    "albumentations==2.0.8",
]

interface = [
    "PySide6==6.10.2",
    "pyqtgraph==0.14.0",
]

realsense = [
    "pyrealsense2==2.56.5.9235",
]

oakd = [
    "depthai==2.32.0.0",
]

all = [
    "mirela-sdk[control,vision,interface,realsense,oakd]",
]

full = [
    "mirela-sdk[all,ai]",
]

[tool.setuptools.packages.find]
include = ["mirela_sdk*"]
exclude = ["test*"]

[tool.setuptools.package-data]
"mirela_sdk.interface" = ["images/*.png"]
"mirela_sdk.ai.detection" = ["configs/*.yaml"]
"mirela_sdk.control" = ["config/**/*.yaml"]
