<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nectar</name>
  <version>1.1.0</version>
  <description>Drone control, computer vision, and AI toolkit for ROS2</description>
  <maintainer email="samuellimabraz@gmail.com">Black Bee Drones</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nectar_interfaces</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
