[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nectar-sdk"
version = "1.0.0"
description = "Drone control, computer vision, and AI toolkit for ROS2"
readme = {text = "Drone control, computer vision, and AI toolkit for ROS2", content-type = "text/plain"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
maintainers = [
    {name = "Black Bee Drones", email = "samuellimabraz@gmail.com"},
]

dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "opencv-python==4.11.0.86",
    "opencv-contrib-python==4.11.0.86",
    "scipy==1.14.1",
    "pillow==12.1.1",
    "pyyaml==6.0.3",
    "tqdm==4.67.3",
    "catkin-pkg==1.0.0",
]

[project.optional-dependencies]

control = [
    "pygeodesy==26.2.2",
    "shapely==2.1.2",
    "geopy==2.4.1",
    "transforms3d==0.4.2",
    "scikit-learn==1.7.2",
]

vision = [
    "mediapipe==0.10.18",
    "protobuf==3.20.3",
]

ai = [
    "ultralytics==8.4.17",
    "huggingface-hub==0.32.4",
    "transformers==4.53.3",
    "timm==1.0.24",
    "accelerate==1.12.0",
    "datasets==3.6.0",
    "rfdetr==1.5.2",
    "supervision==0.27.0",
    "tensorboard==2.20.0",
    "roboflow==1.2.13",
    "albumentations>=1.4.0",
]

interface = [
    "PySide6>=6.8.0,<7.0.0",
    "pyqtgraph==0.14.0",
]

realsense = [
    "pyrealsense2==2.56.5.9235",
]

oakd = [
    "depthai==2.32.0.0",
]

all = [
    "nectar-sdk[control,vision,interface,realsense,oakd]",
]

full = [
    "nectar-sdk[all,ai]",
]

[project.scripts]
nectar-od = "nectar.ai.detection.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (syntax issues, whitespace)
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nectar"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.packages.find]
include = ["nectar*"]
exclude = ["test*"]

[tool.setuptools.package-data]
"nectar.interface" = ["images/*.png"]
"nectar.ai.detection" = ["configs/*.yaml"]
"nectar.control" = ["config/**/*.yaml"]
